testdata/scenarios/02_5-single-policy/k8s/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: kgateway-system
  hostnames:
    - "api.example.com"
  rules:
  - matches:
    # Must use PathPrefix match when using ReplacePrefixMatch rewrite
    - path:
        type: PathPrefix
        value: /api/v1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          # Strip /api/v1 prefix before forwarding to backend
          replacePrefixMatch: /
    backendRefs:
    - name: httpbin
      namespace: httpbin
      port: 8000
